--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
         </title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
@@ -238,7 +238,7 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
-        <script src="script.js">
+        <script src="{{ url_for('static', filename='script.js') }}">
         </script>
     </body>
 </html>
